Fix spacings in second section

--- a/styles.css
+++ b/styles.css
@@ -121,11 +121,10 @@ h1 {
     gap: 8px;
 }
 
-
 .second-section {
     flex-direction: column;
     justify-content: space-between;
-    padding: 30px 0 50px 0;
+    padding: 50px 0 50px 0;
 }
 
 h2 {
@@ -146,7 +145,9 @@ h2 {
 .card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 250px;
+    height: 275px;
 }
 
 .third-section {
